# Graph_2D_mesh

./: README.md
RISCV_GNN/: Makefile  README.md
RISCV_GNN/include/: DW_apb_uart_private.h  DW_apb_uart_public.h  DW_common.h  DW_common_bitops.h  DW_common_dbc.h  DW_common_errno.h  DW_common_io.h  DW_common_list.h  DW_common_types.h  GCN_tool.h  GiGa_port.h  bits.h  common.h  compiler.h  dma.h  drv_usart.h  gpio.h  iocfg.h  lbii.h  matrix_tool.h  numerical_tool.h  pic.h  sMPI.h  s_uart.h  sec.h  stimer.h  wdt.h
RISCV_GNN/ldfile/: link_GiGa_mod.ld
RISCV_GNN/src/: CMakeLists.txt  common.c  intc.c  main.c  sMPI.c  start.S
data/karate/: attributes.csv  edges.csv
mesh/: chip.py  data.py  dataset.py  simulator_v0.5.py
norm/: draw.py  main.py  model.pt  model.py
norm/karate/: infer.py  main.py  model.pt  model.py
